Fixed Menu on Mobile

--- a/public/stylesheets/homepage.sass
+++ b/public/stylesheets/homepage.sass
@@ -2,7 +2,6 @@ section.homepage
     height: 100vh
     .flex 
         .col-100
-            height: 100vh 
             display: flex
             justify-content: center 
             align-items: center
