--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -2,6 +2,9 @@ body
   padding: 0
   margin: 0
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  letter-spacing: 0.08em
+  background: #2E2E3A
+
 
 a
   color: #00B7FF
@@ -25,7 +28,6 @@ a
   width: 100%
 
 
-
 .flex
   display: flex
   flex-direction: row
@@ -41,6 +43,7 @@ a
 
 .order-first
   order: -1
+
 
 .menuwrapper
   z-index: 6
@@ -66,7 +69,7 @@ a
       max-width: 0px
       float: right
       list-style: none
-      background: #434243
+      background: #24383ef5
       overflow: hidden
       color: #ffffff
       padding: 0
@@ -89,11 +92,11 @@ a
     background-color: none
   nav.black ul
     z-index: 6
-    background: #d97a3f5
+    background: #6d97a3f5
   .menu-icon
     z-index: 6
     width: 100%
-    background: #f2644b
+    background: #ff5c39
     text-align: right
     box-sizing: border-box
     padding: 15px 24px
@@ -101,7 +104,14 @@ a
     color: #fff
     display: block
 
-@media only screen and (max-width: 757px)
+@media only screen and (max-width: 767px)
+  .menuwrapper
+    .logo
+      font-size: 20px
+      margin-left: 15px
+    .menu-icon
+      font-size: 15px
+
   .col-30 
     width: auto
 
@@ -119,10 +129,4 @@ a
   .col-100 
     width: auto
   
-  .menuwrapper .logo 
-    font-size: 20px
-    margin-left: 15px
-  
-  .menuwrapper .menu-icon 
-    font-size: 15px
   
